# auto_pm

./: .gitignore  AGENTS.md  PRODUCT.example.md  README.md  justfile  pm-config.example.yml  pyproject.toml
.github/workflows/: ci.yml  reusable-pm-agent.yml
specs/: README.md  manifest.yaml
specs/functional/: autonomous-maintenance.md
specs/technical/: architecture.md  contracts.md  harness.md  synthesis.md
src/pm_agent/: README.md  __init__.py  cli.py
src/pm_agent/adapters/: README.md  __init__.py  anthropic.py  github.py  playwright.py  research.py  runtime.py
src/pm_agent/agents/: __init__.py  base.py  codebase.py  codebase_enhancer.py  codebase_prompts.py  dogfooding.py  existing_issues.py  registry.py  research.py  research_enhancer.py  research_prompts.py
src/pm_agent/config/: __init__.py  loader.py  models.py
src/pm_agent/harness/: __init__.py  loader.py  models.py  runner.py
tests/: README.md  test_architecture_boundaries.py  test_repository_scaffolding.py  test_spec_checker.py
tests/adapters/: test_playwright.py  test_research_adapters.py
tests/agents/: test_codebase_agent.py  test_dogfooding_agent.py  test_existing_issues_agent.py  test_research_agent.py
tests/contracts/: test_config_loader.py  test_contract_models.py
tests/harness/: test_loader.py  test_runner.py
tests/orchestration/: test_artifacts.py  test_dry_run_runner.py  test_lifecycle.py  test_live_collection_runner.py  test_locks.py  test_writeback.py
tests/repo/: test_discovery.py  test_manifest.py  test_product.py
tests/synthesis/: test_engine.py
(+43 files in other folders)
